clusters/staging/ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-wordpress
  namespace: wordpress
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: flux.raoshahzaib.site
    external-dns.alpha.kubernetes.io/target: 9d606950-d84e-42bf-a9a8-0501521b6260.cfargotunnel.com
spec:
  rules:
    - host: flux.raoshahzaib.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-wordpress
                port:
                  number: 80
